[package]
name = "doublepivot-quicksort"
version = "0.2.0"
authors = ["Cristian Rosa <cristian@automative.io>"]
license = "MPL-2.0"
description = "A double pivot quicksort implementation for in-place sorting."
repository = "https://github.com/rosacris/rust-doublepivot-quicksort"
documentation = "https://github.com/rosacris/rust-doublepivot-quicksort/blob/master/README.md"

[lib]
name = "quicksort"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
rand = "0.3"
